feat: test if commits are updating

--- a/documents/fsaws/community-resources-list.html
+++ b/documents/fsaws/community-resources-list.html
@@ -189,6 +189,45 @@
           Separate 12-month live-in Men’s SAFE House and Women’s SAFE House programs that incorporate a structured daily regimen of GED and/or adult education, devotion, group therapy, personal counseling, volunteer work projects, evening community-wide personal enrichment courses, and weekly workship services.</p>
         </section>
 
+        <section>
+          <h2>The Pavilion New Choice Center for Addiction Recovery</h2>
+          <p>809 West Church Street Champaign, IL 61820 tel:217-373-1700(217) 373-1700</a><br>
+          Website: http://www.pavilionhospital.com/http://www.pavilionhospital.com/</a><br>
+          Alcohol and drug treatment services available. Services include residential treatment, medical detoxification, day programs, dual diagnosis treatment, and outpatient services such as individual counseling, family counseling, and continuing care support. Free, confidential assessments are provided 24 hours/day, 7 days/week.</p>
+        </section>
+
+        <section>
+          <h2>Rosecrance</h2>
+          <p>Website: https://rosecrance.org/https://rosecrance.org/</a></p>
+          <ul>
+          <li>Rosecrance on Moreland in Champaign https://rosecrance.org/locations/rosecrance-moreland/https://rosecrance.org/locations/rosecrance-moreland/</a> tel:866-330-8729(866) 330-8729</a> for new clients tel:217-356-7576(217) 356-7576</a> for existing clients</li>
+          <li>Rosecrance in Urbana https://rosecrance.orghttps://rosecrance.org/</a> tel:217-328-4500(217) 328-4500</a></li>
+          <li>Rosecrance Danville https://rosecrance.org/locations/rosecrance-danville/https://rosecrance.org/locations/rosecrance-danville/</a> tel:217--4500(217--4500)</li>
+          </ul>
+        </section>
+
+
+        <section>
+          <h2>Emergency Resources</h2>
+          <h3>C-U at Home Austin’s Place—Emergency Shelter for Single Women</h3>
+          <p>First United Methodist Church 504 N. Market Street Champaign, IL 61820 Website: https://www.cuathome.us/austins-place-womens-shelter/https://www.cuathome.us/austins-place-womens-shelter/,</a> tel:217-356-9078(217) 356-9078</a><br>
+          Provides overnight shelter for homeless single women in Champaign County from December 31 – March 31 only.</p>
+
+          <h3>City of Urbana—Transitional Housing Program for Homeless Families</h3>
+          <p>400 South Vine Street Urbana, IL 61801 tel:(217)384-0200(217) 384-0200</a><br>
+          Website: http://urbanaillinois.us/terms/transitional-housinghttp://urbanaillinois.us/terms/transitional-housing</a><br>
+          This program is by application only and available to homeless families with dependent children who have been residents of Champaign County for at least three months. Applications are available only when there are vacancies.</p>
+
+          <h3>Courage Connection</h3>
+          <p>508 East Church Street Champaign, IL 61820 tel:217-352-7151(217) 352-7151</a> (main office) tel:217-384-4390(217) 384-4390</a> or tel:877-384-4390(877) 384-4390</a> (24 hour, domestic violence hotline)<br>
+          Website: http://courageconnection.org/http://courageconnection.org/</a><br>
+          Provides emergency shelter services for individuals and families experiencing homelessness or who are victims of domestic violence. Individuals can either call the 24-hour hotline to speak with a counselor about options or show up at the Courage Connection office. Legal advocacy and individual counseling services are also offered.</p>
+
+          <h3>Crisis Nursery</h3>
+          <p>1309 West Hill Urbana, IL 61801 tel:217-337-2731(217) 337-2731</a> (main office) tel:217-337-2730(217) 337-2730</a> (crisis line)<br>
+          Website: http://www.crisisnursery.net/www.crisisnursery.net</a><br>
+          Provides emergency child care services for children ages zero to five years old whose families are experiencing a crisis situation. Emergency childcare services are available 24 hours a day, 7 days a week. It is strongly recommended to call in advance to see if space is available for your child; however, walk-ins are also accepted. Crisis nursery also offers parent-child interaction groups, perinatal depression support services, home visits, and respite care.</p>
+        </section>
 
         
     </main>
