feat: add new docs

--- a/documents/fsaws/community-resources-list.html
+++ b/documents/fsaws/community-resources-list.html
@@ -42,7 +42,7 @@
     </script>
 
     <!-- REPLACE THIS -->
-    <title>Community Resources List</title>
+    <title>Community Resource List</title>
   </head>
   <body>
     <ilw-page>
@@ -162,79 +162,184 @@
           </ul>
         </section>
 
-        
         <section>
           <h2>Work 4 Illinois—Champaign Office</h2>
-          <p>State Regional Office Building 2125 South First Street Champaign, IL 61820 tel:217-278-3435(217) 278-3435</a><br>
-          Website: http://work.illinois.gov/carsrvcs.htmhttp://work.illinois.gov/carsrvcs.htm</a><br>
-          Career counseling services available for individuals seeking State of Illinois employment. Call to schedule an appointment.</p>
+          <p>
+            State Regional Office Building 2125 South First Street Champaign, IL
+            61820 <a href="tel:217-278-3435">(217) 278-3435</a><br />
+            Website:
+            <a href="http://work.illinois.gov/carsrvcs.htm"
+              >http://work.illinois.gov/carsrvcs.htm</a
+            ><br />
+            Career counseling services available for individuals seeking State
+            of Illinois employment. Call to schedule an appointment.
+          </p>
         </section>
 
         <section>
           <h2>Drug And Alcohol Resources</h2>
           <h3>Al-Anon Family Group</h3>
-          <p>This is a mutual support group that is comprised of members who share the same problem and support each other voluntarily as they work through the recovery process of living with someone who is chemically dependent.<br>
-          Website: http://www.al-anon.org/al-anon-in-illinoishttp://www.al-anon.org/al-anon-in-illinois</a></p>
+          <p>
+            This is a mutual support group that is comprised of members who
+            share the same problem and support each other voluntarily as they
+            work through the recovery process of living with someone who is
+            chemically dependent.<br />
+            Website:
+            <a href="http://www.al-anon.org/al-anon-in-illinois"
+              >http://www.al-anon.org/al-anon-in-illinois</a
+            >
+          </p>
 
           <h3>Alcoholics Anonymous (AA)</h3>
-          <p>tel:217-373-4200(217) 373-4200</a><br>
-          Email: mailto:aa-ecior@aa-eci.orgaa-ecior@aa-eci.org</a><br>
-          Website: http://www.aa-eci.org/http://www.aa-eci.org/</a><br>
-          Call or email for local AA meetings and events in your area.</p>
+          <p>
+            Call: <a href="tel:217-373-4200">(217) 373-4200</a><br />
+            Email: <a href="mailto:aa-ecior@aa-eci.org">aa-ecior@aa-eci.org</a
+            ><br />
+            Website: <a href="http://www.aa-eci.org/">http://www.aa-eci.org/</a
+            ><br />
+            Call or email for local AA meetings and events in your area.
+          </p>
 
-          <h3>Canaan Development Foundation S.A.F.E. (Substance Abuse Free Environment) House</h3>
-          <p>404 W Main Street Urbana, IL 61801 tel:217-344-7233(217) 344-7233</a> (crisis phone)<br>
-          Email: mailto:cbc@canaanurbana.orgcbc@canaanurbana.org</a> (general information)<br>
-          Website: http://www.canaansafehouse.org/www.canaansafehouse.org</a><br>
-          Separate 12-month live-in Men’s SAFE House and Women’s SAFE House programs that incorporate a structured daily regimen of GED and/or adult education, devotion, group therapy, personal counseling, volunteer work projects, evening community-wide personal enrichment courses, and weekly workship services.</p>
+          <h3>
+            Canaan Development Foundation S.A.F.E. (Substance Abuse Free
+            Environment) House
+          </h3>
+          <p>
+            404 W Main Street Urbana, IL 61801
+            <a href="tel:217-344-7233">(217) 344-7233</a> (crisis phone)<br />
+            Email:
+            <a href="mailto:cbc@canaanurbana.org">cbc@canaanurbana.org</a>
+            (general information)<br />
+            Website:
+            <a href="https://www.canaansafehouse.org/"
+              >www.canaansafehouse.org</a
+            ><br />
+            Separate 12-month live-in Men’s SAFE House and Women’s SAFE House
+            programs that incorporate a structured daily regimen of GED and/or
+            adult education, devotion, group therapy, personal counseling,
+            volunteer work projects, evening community-wide personal enrichment
+            courses, and weekly workship services.
+          </p>
         </section>
 
         <section>
           <h2>The Pavilion New Choice Center for Addiction Recovery</h2>
-          <p>809 West Church Street Champaign, IL 61820 tel:217-373-1700(217) 373-1700</a><br>
-          Website: http://www.pavilionhospital.com/http://www.pavilionhospital.com/</a><br>
-          Alcohol and drug treatment services available. Services include residential treatment, medical detoxification, day programs, dual diagnosis treatment, and outpatient services such as individual counseling, family counseling, and continuing care support. Free, confidential assessments are provided 24 hours/day, 7 days/week.</p>
+          <p>
+            809 West Church Street Champaign, IL 61820
+            <a href="tel:217-373-1700">(217) 373-1700</a><br />
+            Website:
+            <a href="http://www.pavilionhospital.com/"
+              >http://www.pavilionhospital.com/</a
+            ><br />
+            Alcohol and drug treatment services available. Services include
+            residential treatment, medical detoxification, day programs, dual
+            diagnosis treatment, and outpatient services such as individual
+            counseling, family counseling, and continuing care support. Free,
+            confidential assessments are provided 24 hours/day, 7 days/week.
+          </p>
         </section>
 
         <section>
           <h2>Rosecrance</h2>
-          <p>Website: https://rosecrance.org/https://rosecrance.org/</a></p>
+          <p>
+            Website:
+            <a href="https://rosecrance.org/">https://rosecrance.org/</a>
+          </p>
           <ul>
-          <li>Rosecrance on Moreland in Champaign https://rosecrance.org/locations/rosecrance-moreland/https://rosecrance.org/locations/rosecrance-moreland/</a> tel:866-330-8729(866) 330-8729</a> for new clients tel:217-356-7576(217) 356-7576</a> for existing clients</li>
-          <li>Rosecrance in Urbana https://rosecrance.orghttps://rosecrance.org/</a> tel:217-328-4500(217) 328-4500</a></li>
-          <li>Rosecrance Danville https://rosecrance.org/locations/rosecrance-danville/https://rosecrance.org/locations/rosecrance-danville/</a> tel:217--4500(217--4500)</li>
+            <li>
+              Rosecrance on Moreland in Champaign
+              <a href="https://rosecrance.org/locations/rosecrance-moreland/"
+                >https://rosecrance.org/locations/rosecrance-moreland/</a
+              >
+              <a href="tel:866-330-8729">(866) 330-8729</a> for new clients
+              <a href="tel:217-356-7576">(217) 356-7576</a> for existing clients
+            </li>
+            <li>
+              Rosecrance in Urbana
+              <a href="https://rosecrance.org">https://rosecrance.org/</a>
+              <a href="tel:217-328-4500">(217) 328-4500</a>
+            </li>
+            <li>
+              Rosecrance Danville
+              <a href="https://rosecrance.org/locations/rosecrance-danville/"
+                >https://rosecrance.org/locations/rosecrance-danville/</a
+              >
+              <a href="tel:217--4500">(217--4500)</a>
+            </li>
           </ul>
         </section>
-
 
         <section>
           <h2>Emergency Resources</h2>
           <h3>C-U at Home Austin’s Place—Emergency Shelter for Single Women</h3>
-          <p>First United Methodist Church 504 N. Market Street Champaign, IL 61820 Website: https://www.cuathome.us/austins-place-womens-shelter/https://www.cuathome.us/austins-place-womens-shelter/,</a> tel:217-356-9078(217) 356-9078</a><br>
-          Provides overnight shelter for homeless single women in Champaign County from December 31 – March 31 only.</p>
+          <p>
+            First United Methodist Church 504 N. Market Street Champaign, IL
+            61820 <br>
+            Website:
+            <a href="https://www.cuathome.us/austins-place-womens-shelter/"
+              >https://www.cuathome.us/austins-place-womens-shelter/</a
+            >, <a href="tel:217-356-9078">(217) 356-9078</a><br />
+            Provides overnight shelter for homeless single women in Champaign
+            County from December 31 – March 31 only.
+          </p>
 
-          <h3>City of Urbana—Transitional Housing Program for Homeless Families</h3>
-          <p>400 South Vine Street Urbana, IL 61801 tel:(217)384-0200(217) 384-0200</a><br>
-          Website: http://urbanaillinois.us/terms/transitional-housinghttp://urbanaillinois.us/terms/transitional-housing</a><br>
-          This program is by application only and available to homeless families with dependent children who have been residents of Champaign County for at least three months. Applications are available only when there are vacancies.</p>
+          <h3>
+            City of Urbana—Transitional Housing Program for Homeless Families
+          </h3>
+          <p>
+            400 South Vine Street Urbana, IL 61801
+            <a href="tel:(217)384-0200">(217) 384-0200</a><br />
+            Website:
+            <a href="http://urbanaillinois.us/terms/transitional-housing"
+              >http://urbanaillinois.us/terms/transitional-housing</a
+            ><br />
+            This program is by application only and available to homeless
+            families with dependent children who have been residents of
+            Champaign County for at least three months. Applications are
+            available only when there are vacancies.
+          </p>
 
           <h3>Courage Connection</h3>
-          <p>508 East Church Street Champaign, IL 61820 tel:217-352-7151(217) 352-7151</a> (main office) tel:217-384-4390(217) 384-4390</a> or tel:877-384-4390(877) 384-4390</a> (24 hour, domestic violence hotline)<br>
-          Website: http://courageconnection.org/http://courageconnection.org/</a><br>
-          Provides emergency shelter services for individuals and families experiencing homelessness or who are victims of domestic violence. Individuals can either call the 24-hour hotline to speak with a counselor about options or show up at the Courage Connection office. Legal advocacy and individual counseling services are also offered.</p>
+          <p>
+            508 East Church Street Champaign, IL 61820
+            <a href="tel:217-352-7151">(217) 352-7151</a> (main office)
+            <a href="tel:217-384-4390">(217) 384-4390</a> or
+            <a href="tel:877-384-4390">(877) 384-4390</a> (24 hour, domestic
+            violence hotline)<br />
+            Website:
+            <a href="http://courageconnection.org/"
+              >http://courageconnection.org/</a
+            ><br />
+            Provides emergency shelter services for individuals and families
+            experiencing homelessness or who are victims of domestic violence.
+            Individuals can either call the 24-hour hotline to speak with a
+            counselor about options or show up at the Courage Connection office.
+            Legal advocacy and individual counseling services are also offered.
+          </p>
 
           <h3>Crisis Nursery</h3>
-          <p>1309 West Hill Urbana, IL 61801 tel:217-337-2731(217) 337-2731</a> (main office) tel:217-337-2730(217) 337-2730</a> (crisis line)<br>
-          Website: http://www.crisisnursery.net/www.crisisnursery.net</a><br>
-          Provides emergency child care services for children ages zero to five years old whose families are experiencing a crisis situation. Emergency childcare services are available 24 hours a day, 7 days a week. It is strongly recommended to call in advance to see if space is available for your child; however, walk-ins are also accepted. Crisis nursery also offers parent-child interaction groups, perinatal depression support services, home visits, and respite care.</p>
+          <p>
+            1309 West Hill Urbana, IL 61801
+            <a href="tel:217-337-2731">(217) 337-2731</a> (main office)
+            <a href="tel:217-337-2730">(217) 337-2730</a> (crisis line)<br />
+            Website:
+            <a href="http://www.crisisnursery.net/">www.crisisnursery.net</a
+            ><br />
+            Provides emergency child care services for children ages zero to
+            five years old whose families are experiencing a crisis situation.
+            Emergency childcare services are available 24 hours a day, 7 days a
+            week. It is strongly recommended to call in advance to see if space
+            is available for your child; however, walk-ins are also accepted.
+            Crisis nursery also offers parent-child interaction groups,
+            perinatal depression support services, home visits, and respite
+            care.
+          </p>
         </section>
-
-        
-    </main>
+      </main>
 
       <!-- FOOTER - Customize for each document -->
       <ilw-footer slot="footer">
-        <p>Last modified: March 2024</p>
+        <p>Last updated: March 2024</p>
       </ilw-footer>
       <!-- REPLACE EVERYTHING ABOVE THIS LINE -->
     </ilw-page>
