feat(documents): add and update the documents

--- a/documents/key-websites-for-new-employees.html
+++ b/documents/key-websites-for-new-employees.html
@@ -27,7 +27,7 @@
     <link rel="dns-prefetch" href="//cdn.toolkit.illinois.edu" />
     <link rel="dns-prefetch" href="//cdn.disability.illinois.edu" />
     <link rel="stylesheet" href="//cdn.toolkit.illinois.edu/3/toolkit.css" />
-    <link rel="stylesheet" href="../assets/css/documents-styles.css" />
+    <link rel="stylesheet" href="./assets/css/documents-styles.css" />
     <script
       type="module"
       src="//cdn.toolkit.illinois.edu/3/toolkit.js"
@@ -42,8 +42,9 @@
     </script>
 
     <!-- REPLACE THIS -->
-    <title>Document Title</title>
+    <title>Key Websites for New Employees</title>
   </head>
+
   <body>
     <ilw-page>
       <!-- HEADER - Same for all documents -->
@@ -55,9 +56,85 @@
 
       <!-- REPLACE EVERYTHING BELOW THIS LINE -->
       <main>
-        <h1>Document Title</h1>
-        <p>Your content here...</p>
-        <p>Last updated if applicable: [DATE]</p>
+        <h1>Key Websites for New Employees</h1>
+
+        <section>
+          <ul>
+            <li>
+              <a href="http://www.illinois.edu/"
+                >University of Illinois at Urbana-Champaign</a
+              >
+            </li>
+            <li>Your unit and/or College website</li>
+            <li>
+              <a href="http://www.ahr.illinois.edu/"
+                >Academic Human Resources</a
+              >
+            </li>
+            <li>
+              <a href="http://www.provost.illinois.edu/"
+                >Provost’s Office (Communications)</a
+              >
+            </li>
+            <li>
+              <a href="http://cam.illinois.edu/"
+                >Campus Administrative Manual (CAM)</a
+              >
+            </li>
+            <li>
+              <a href="http://www.illinois.edu/ds/search"
+                >Electronic Phonebook (PH)</a
+              >
+            </li>
+            <li>
+              <a href="https://nessie.uihr.uillinois.edu/"
+                >NESSIE (Net-driven Employee Self-Service and Information
+                Environment)</a
+              >
+            </li>
+            <li>
+              <a href="http://www.pb.uillinois.edu/dr/staffing/orgcharts.cfm"
+                >University and Campus Organizational Charts</a
+              >
+            </li>
+
+            <li>
+              <a href="http://www.obfs.uillinois.edu/"
+                >OBFS (Office of Business and Financial Services) - Business and
+                finance policies</a
+              >
+            </li>
+            <li>
+              <a href="http://techservices.illinois.edu/"
+                >CITES (Campus Information Technologies and Educational
+                Services)</a
+              >
+            </li>
+            <li>
+              <a href="https://security.illinois.edu/"
+                >OPIA (Office of Privacy and Information Assurance)</a
+              >
+            </li>
+            <li>
+              <a href="http://www.cap.illinois.edu/"
+                >Council of Academic Professionals (CAP)</a
+              >
+            </li>
+            <li>
+              <a href="http://www.senate.illinois.edu/">Faculty Senate</a>
+            </li>
+
+            <li>
+              <a href="http://www.ieanea.org/"
+                >IEA/NEA – Association for Academic Professions (Visiting
+                Academic Professionals’ bargaining unit)</a
+              >
+            </li>
+            <li>
+              <a href="http://www.parking.illinois.edu/">Parking</a>
+            </li>
+          </ul>
+        </section>
       </main>
 
       <!-- FOOTER - DO NOT CHANGE ANYTHING BELOW THIS LINE -->
