--- a/documents/planning-retirement-checklist.html
+++ b/documents/planning-retirement-checklist.html
@@ -45,6 +45,10 @@
     <title>Planning for Retirement Checklist</title>
 
     <style>
+        ul {
+            margin: 1rem 0 1rem 1.5rem;
+        }
+
       .checklist {
         list-style-type: none;
       }
@@ -304,13 +308,106 @@
             retirement ID.
           </li>
         </ul>
+        <p>Last updated: February 19, 2024</p>
       </main>
 
-      <!-- FOOTER - Customize for each document -->
+      <!-- FOOTER - DO NOT CHANGE ANYTHING BELOW THIS LINE -->
       <ilw-footer slot="footer">
-        <p>Last updated: February 19, 2024</p>
+        <a slot="site-name" href="https://humanresources.illinois.edu/"
+          >Illinois Human Resources</a
+        >
+        <address slot="address">
+          <div>
+            <a href="https://maps.app.goo.gl/EkaAWXJe8aUnTcjH6"
+              >Personnel Services Building – MC 562 <br />52 E. Gregory Dr.,
+              <br />Champaign, IL 61820</a
+            >
+          </div>
+          <div>Phone: <a href="tel:2173332137">217-333-2137</a></div>
+          <div>
+            Email: <a href="mailto:ihr@illinois.edu">ihr@illinois.edu</a>
+          </div>
+        </address>
+        <nav slot="social" aria-label="Social media">
+          <ul>
+            <li>
+              <a
+                data-service="facebook"
+                href="https://www.facebook.com/illinoishumanresources"
+                >Facebook</a
+              >
+            </li>
+            <li>
+              <a data-service="x" href="https://twitter.com/IllinoisHR">X</a>
+            </li>
+            <li>
+              <a
+                data-service="linkedin"
+                href="https://www.linkedin.com/company/99140536/admin/feed/posts/"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a
+                data-service="youtube"
+                href="https://www.youtube.com/channel/UC5qjdwsDANDMPUMch3oH5ZA"
+                >YouTube</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <ilw-columns>
+          <ilw-content theme="gray">
+            <p class="ilw-heading">Resources</p>
+            <hr />
+            <ul style="list-style-type: none; line-height: 1">
+              <li>
+                <a href="https://humanresources.illinois.edu/about/">About</a>
+              </li>
+              <li>
+                <a
+                  href="https://humanresources.illinois.edu/campus-holiday-schedule/"
+                  >Campus Holiday Schedule</a
+                >
+              </li>
+              <li>
+                <a href="https://youtu.be/k_65146S1oE">Site navigation help</a>
+              </li>
+              <li>
+                <a href="https://jobs.illinois.edu/">Jobs.illinois.edu</a>
+              </li>
+              <li><a href="https://www.hr.uillinois.edu/myinfo">MyUInfo</a></li>
+            </ul>
+          </ilw-content>
+          <ilw-content theme="gray">
+            <p class="ilw-heading">Connect</p>
+            <hr />
+            <ul style="list-style-type: none; line-height: 1">
+              <li>
+                <a href="https://humanresources.illinois.edu/job-seekers/"
+                  >Are you a Job Seeker?</a
+                >
+              </li>
+              <li>
+                <a href="https://humanresources.illinois.edu/hr-contacts/"
+                  >Who is my unit HR Contact</a
+                >
+              </li>
+              <li>
+                <a href="https://humanresources.illinois.edu/about/contact-us/"
+                  >General HR Questions?</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://forms.office.com/Pages/ResponsePage.aspx?id=b35GRCxGok6CP3gA3lQ04-jFzRbA0DRNrWkKHhbJX_xUMU9VTEVPREZBMFFVS1Q4Q09MNTVLN0Q3SC4u"
+                  >Want to share website feedback?</a
+                >
+              </li>
+            </ul>
+          </ilw-content>
+        </ilw-columns>
       </ilw-footer>
-      <!-- REPLACE EVERYTHING ABOVE THIS LINE -->
     </ilw-page>
   </body>
 </html>
