feat: add new docs

--- a/documents/key-objectives-goals.html
+++ b/documents/key-objectives-goals.html
@@ -67,25 +67,25 @@
           <h2>Overarching Initiative Goals</h2>
           <ol>
             <li>
-              Build an AI-enabled workforce and leadership culture. Equip
+              <strong>Build an AI-enabled workforce and leadership culture.</strong> Equip
               employees and leaders with the skills, confidence, and mindsets to
               responsibly and effectively use AI to improve work quality,
               efficiency, and innovation.
             </li>
             <li>
-              Accelerate organizational readiness for AI-driven transformation.
+              <strong>Accelerate organizational readiness for AI-driven transformation.</strong>
               Prepare teams, workflows, and leadership for emerging technologies
               by embedding adaptable capabilities at various levels of the
               organization.
             </li>
             <li>
-              Strengthen internal talent mobility and career growth. Create the
+              <strong>Strengthen internal talent mobility and career growth.</strong> Create the
               foundation for future-relevant roles that are supported by badges
               which signal readiness for expanded responsibilities,
               AI-integrated work.
             </li>
             <li>
-              Foster responsible, ethical, and human-centered AI adoption.
+              <strong>Foster responsible, ethical, and human-centered AI adoption.</strong>
               Ensure the university integrates AI in ways that protect people,
               strengthen trust, and enhance decision-making by grounding all
               learning principles of safety, equity, and responsible governance.
@@ -97,34 +97,34 @@
           <h2>Key Objectives</h2>
           <ol>
             <li>
-              Develop tiered, future-ready competencies across the workforce.
+              <strong>Develop tiered, future-ready competencies across the workforce.</strong>
               Implement a structured learning pathway that equips employees and
               leaders with progressively deeper capabilities aligned to their
               roles and career aspirations.
             </li>
             <li>
-              Build a distributed network of skilled AI practitioners and
-              strategists. Identify and develop ‘super AI users’ and ‘AI forward
+              <strong>Build a distributed network of skilled AI practitioners and
+              strategists.</strong> Identify and develop ‘super AI users’ and ‘AI forward
               strategists’ who can support work redesign, automation
               opportunities, experimentation, and scaling effective practices
               across departments.
             </li>
             <li>
-              Enhance change agility and reduce change fatigue. Provide
+              <strong>Enhance change agility and reduce change fatigue.</strong> Provide
               practical tools, frameworks, and micro-skills that support
               effective communication, understanding complex situations,
               prioritization, workflow adaptation, and team resilience during
               ongoing technological transformation
             </li>
             <li>
-              Strengthen decision making through responsible AI practices. Equip
+              <strong>Strengthen decision making through responsible AI practices.</strong> Equip
               leaders with the capability to integrate AI insights into
               planning, resource allocation, risk assessment, and performance
               conversations while ensuring ethical and transparent use.
             </li>
             <li>
-              Support talent development, bench strength, and succession
-              planning. Leverage badges and competency achievements to signal
+              <strong>Support talent development, bench strength, and succession
+              planning.</strong> Leverage badges and competency achievements to signal
               readiness for future roles, guide internal talent marketplace
               opportunities, and inform workforce planning and succession
               strategies.
