feat: update docs style

--- a/documents/classifications-no-remote-work.html
+++ b/documents/classifications-no-remote-work.html
@@ -72,6 +72,10 @@
         color: #fff;
       }
 
+      .services {
+        margin: 20px 0 0 30px;
+      }
+
       @media (max-width: 600px) {
         .functional-areas {
           justify-content: flex-start;
@@ -95,7 +99,7 @@
       <!-- REPLACE EVERYTHING BELOW THIS LINE -->
       <main>
         <h1>
-          Classifications that Cannot Perform Remote Work -- by Functional Area
+          Classifications that Cannot Perform Remote Work by Functional Area
         </h1>
 
         <section class="functional-areas" aria-label="Functional Areas">
@@ -118,7 +122,7 @@
 
         <section id="airport-services">
           <h2>Airport Services</h2>
-          <ul>
+          <ul class="services">
             <li>Aircraft Maintenance Manager</li>
             <li>Aircraft Maintenance Mechanic Helper</li>
             <li>Aircraft Shop Foreman</li>
@@ -142,7 +146,7 @@
 
         <section id="agricultural-services">
           <h2>Agricultural Services</h2>
-          <ul>
+          <ul class="services">
             <li>Agricultural Gardener</li>
             <li>Agricultural Gardener Foreman</li>
             <li>Assistant Agricultural Research Technician</li>
@@ -156,7 +160,7 @@
 
         <section id="athletics">
           <h2>Athletics/State Farm Center</h2>
-          <ul>
+          <ul class="services">
             <li>
               Assistant Chief Building Operating Engineer (State Farm Center)
             </li>
@@ -178,7 +182,7 @@
 
         <section id="child-care">
           <h2>Child Care</h2>
-          <ul>
+          <ul class="services">
             <li>Child Care Assistant</li>
             <li>Child Care Resource Specialist</li>
             <li>Child Development Associate</li>
@@ -191,7 +195,7 @@
 
         <section id="communications">
           <h2>Communications</h2>
-          <ul>
+          <ul class="services">
             <li>Communications Technician I</li>
             <li>Communications Technician II</li>
             <li>Communications Technician III</li>
@@ -207,7 +211,7 @@
 
         <section id="driver-automotive">
           <h2>Driver/Automotive Services</h2>
-          <ul>
+          <ul class="services">
             <li>Automotive Body Repair Technician</li>
             <li>Automotive Foreman</li>
             <li>Automotive Parts Manager</li>
@@ -226,7 +230,7 @@
 
         <section id="food-service">
           <h2>Food Service</h2>
-          <ul>
+          <ul class="services">
             <li>Assistant Food Production Manager</li>
             <li>Assistant Food Service Manager</li>
             <li>Assistant Pastry Chef</li>
@@ -258,7 +262,7 @@
 
         <section id="grounds-maintenance">
           <h2>Grounds/Maintenance</h2>
-          <ul>
+          <ul class="services">
             <li>Grounds Equipment Mechanic</li>
             <li>Grounds Foreman</li>
             <li>Grounds Gardener</li>
@@ -272,7 +276,7 @@
 
         <section id="health-services">
           <h2>Health Services</h2>
-          <ul>
+          <ul class="services">
             <li>Animal Imaging Coordinator</li>
             <li>Animal Imaging Specialist</li>
             <li>Animal Imaging Technician</li>
@@ -319,7 +323,7 @@
 
         <section id="campus-mail-parking">
           <h2>Campus Mail/Parking</h2>
-          <ul>
+          <ul class="services">
             <li>Coin Machine Attendant</li>
             <li>Coin Machine Mechanic</li>
             <li>Mail Messenger</li>
@@ -338,7 +342,7 @@
 
         <section id="protective-services">
           <h2>Protective Services</h2>
-          <ul>
+          <ul class="services">
             <li>Environmental Health & Safety Technician I</li>
             <li>Environmental Health & Safety Technician II</li>
             <li>Environmental Health & Safety Technician III</li>
@@ -354,7 +358,7 @@
 
         <section id="research-services">
           <h2>Research Services</h2>
-          <ul>
+          <ul class="services">
             <li>Cryogenic Technician I</li>
             <li>Cryogenic Technician II</li>
             <li>Driller</li>
@@ -380,7 +384,7 @@
 
         <section id="retail-operations">
           <h2>Retail Operations</h2>
-          <ul>
+          <ul class="services">
             <li>Assistant Bookstore Manager</li>
             <li>Bowling & Billiards Center Attendant</li>
             <li>Bowling & Billiards Center Manager</li>
@@ -397,7 +401,7 @@
 
         <section id="skilled-crafts">
           <h2>Skilled Crafts/Construction/Building Maintenance</h2>
-          <ul>
+          <ul class="services">
             <li>Assistant Chief Building Operating Engineer</li>
             <li>Assistant Laboratory Mechanic</li>
             <li>Assistant Operating Engineer</li>
